objects/Competitors__c.object
<CustomObject>
    <description>R5 - New Custom object Competitors</description>
    <fields>
        <fullName>Channel_Partner_Business_Plan_Status__c</fullName>
        <formula>IF ( (TEXT(Joint_Business_Plan__r.Status__c) == &apos;Closed&apos; || TEXT(Joint_Business_Plan__r.Status__c) == &apos;Obsolete&apos;), &apos;Closed&apos;, TEXT(Joint_Business_Plan__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Business Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filled_fields_count__c</fullName>
        <description>R6</description>
        <label>Filled fields count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Focused_Industry__c</fullName>
        <label>Focused Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Building - Residential Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building - Commercial &amp; institutional Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building - Industrial Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Automotive - Automotive (Vehicles - OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Automotive - Automotives (Parts - Tier1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Petrochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Ingredients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Sugar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Bakery &amp; Confectionery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Fruit &amp; Vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Meat, Poultry, Seafood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Other Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Textile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Metals - Aluminium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Metals - Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Metals - Other Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Electronics and Semiconductors (3C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Mining and Minerals - Underground Mining including Hoisting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Mining and Minerals - Open Pit Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Mining and Minerals - Grinding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Mining and Minerals - Mineral Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Cement and Glass - Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Cement and Glass - Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Oil and Gas Industry -Oil and Gas - Offshore Upstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Oil and Gas Industry -Oil and Gas - Onshore Upstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Oil and Gas Industry - Refining</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5 - Joint Business Plan</description>
        <label>Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Main_Competitive_Products__c</fullName>
        <description>R5 - Main competitive products</description>
        <label>Main Competitive Products</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Competitors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Main Competitors</description>
        <label>Main Competitors</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>R5 - Notes</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Weaknesses_against_competitor__c</fullName>
        <description>R5 - Partner Weaknesses against competitor</description>
        <label>Partner Weaknesses against competitor</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <description>R5 - Strengths</description>
        <label>Competitor Strengths</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strengths_against_this_competitor__c</fullName>
        <description>R5 - Strengths against this competitor</description>
        <inlineHelpText>Partner&apos;s strengths when competing against this competitor</inlineHelpText>
        <label>Partner Strengths against competitor</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Competitors_Value__c</fullName>
        <description>R5 - Unique competitor value used in workflow rule</description>
        <label>Unique Competitors Value</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <description>R5 - Weaknesses</description>
        <label>Competitor Weaknesses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Completeness__c</fullName>
        <formula>IF (Filled_fields_count__c == 0, 0, Filled_fields_count__c / ( VALUE($Label.Sys_Total_Fields_in_Competitors) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Joint_Business_Plan__c</columns>
        <columns>Focused_Industry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>COMPET-NAME-{0000}</displayFormat>
        <label>Competitors  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Unique_Check_JBP_Competitors</fullName>
        <active>true</active>
        <description>R5 -Account duplicate check</description>
        <errorConditionFormula>IF( Joint_Business_Plan__r.Account__c  ==  Main_Competitors__c ,true, false)</errorConditionFormula>
        <errorDisplayField>Main_Competitors__c</errorDisplayField>
        <errorMessage>Same account cannot be added</errorMessage>
    </validationRules>
</CustomObject>